[tool.poetry]
name = "onebone"
version = "1.2.0"
description = "An Open Source Signal Processing Library for Sensor Signals about vibration, current, etc."
authors = ["Kyunghwan Kim <kyunghwan.kim@onepredict.com>"]

[tool.poetry.dependencies]
python = ">=3.6.5, <3.11"
numpy = ">=1.19.5"
pandas = ">=1.1.5"
scipy = ">=1.5.4"
sklearn = "^0.0"
matplotlib = ">=3.3.4"
PyWavelets = "1.1.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-bugbear = "^21.9.2"
flake8-docstrings = "^1.6.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.0.7"
pytest-forked = "^1.3.0"
pytest-xdist = "^2.4.0"
pre-commit = "^2.15.0"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100