[tool.poetry]
name = "onebone"
version = "1.3.0"
description = "An Open Source Signal Processing Library for Sensor Signals about vibration, current, etc."
authors = [
    "Kyunghwan Kim <kyunghwan.kim@onepredict.com>",
    "Kangwhi Kim <kangwhi.kim@onepredict.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.23.0"
pandas = "^1.4.3"
scipy = "^1.8.1"
sklearn = "^0.0"
matplotlib = "^3.5.2"
PyWavelets = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-bugbear = "^22.6.22"
flake8-docstrings = "^1.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.1"
pytest-forked = "^1.4.0"
pytest-xdist = "^2.5.0"
pre-commit = "^2.19.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
